2012-02-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Remove error test that could not be reached in the DATA
	case and is incorrect in the FUNC case.

2012-01-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c term/linux.trm:  Provide a 5x9 raster font for linux.trm
	and svga.trm so that they are not dependent on --with-bitmap-terminals.
	Bug #3481336

2012-01-29  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm:  Make the font scale handling more like pdf and eps.
	Bugs #3478745 #3480006

2012-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  If there is no key title, there is no need to draw a
	line between the title and the key samples.
	Bug #3478984

	* docs/gnuplot.doc:  Clarify that strlen returns string length in bytes,
	not characters.

2012-01-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.h src/datafile.c src/plot2d.c src/breaders.c src/plot3d.c
	src/stats.c:  When reporting bad data in an input file, give the file
	name in addition to the current line number.

	* term/wxt.trm src/term_api.h src/term.c src/qtterminal/qt_term.cpp
	src/wxterminal/wxt_gui.cpp:  Switching the terminal from qt to wxt or
	vice versa causes the program to lock up or segfault.  Introduce a flag
	terminal_interlock to prevent such a switch.

2012-01-19  Khanh-Dang  <kdntl@users.sourceforge.net>

	* gplt_x11.c (gpXStoreName):  Provide a name string for both
	WM_NAME and WM_ICON_NAME.

2012-01-17  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* configure.in src/Makefile.am src/qtterminal/Makefile.am
	src/qtterminal/QtGnuplotApplication.cpp
	src/qtterminal/QtGnuplotApplication.h src/qtterminal/QtGnuplotEvent.cpp
	src/qtterminal/QtGnuplotEvent.h src/qtterminal/gnuplot_qt.cpp
	src/qtterminal/qt_term.cpp term/qt.trm: The Qt terminal application is
	executed in a separate executable called gnuplot_qt, started by exec.
	This makes the Qt terminal compatible with OS X.
