@@ -1,3 +1,8 @@
+2012-02-06  Thanate Dhirasakdanon  <dthanate@users.sourceforge.net>
+
+	* term/luz.trm: Compatibility wrapper functions to support both lua 5.2
+	and earlier versions.
+
 2012-02-06  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/plot2d.c: Remove error test that could not be reached in the DATA
